Adding information about migration ZIP creation. Updating some json attributes

--- a/docs/expedition/creating_migration_zip.mdx
+++ b/docs/expedition/creating_migration_zip.mdx
@@ -82,6 +82,7 @@ The following is an example that represents the migration of three configuration
             [{"firewall": "ClusterSite1", "policy": "Provider1"},
              {"firewall": "ClusterSite2", "policy": "Provider2"}],
         "replacements":{
+          "comment": "not available yet",
           "networks":
             [
               {"from": "10.0.0.0/24", "to": "10.0.23.0/24"},
