--- a/docs/expedition/expedition_workflow_migration.mdx
+++ b/docs/expedition/expedition_workflow_migration.mdx
@@ -150,8 +150,8 @@ API syntax for Converting 3rd party vendors' configurations:
 
 | Method      | URL                                                        | Parameters |
 |-------------|-----------------------------------------------------------------|------------|
-|       POST  | <small>`https://<ExpIP>/api/v1/external-tools/convert`</small>  | <small>_in body_<br/>{**"input"**: "path to the ZIP file",<br/>**"output"**: "path to the resulting PANOS config file"}</small>|
-|    example  | <small>`https://10.0.0.1/api/v1/external-tools/convert`</small> | <small>_in body_<br/>{**"input"**: "/var/www/html/expedition-api/contents/configSamples/migration1.zip",<br/>**"output"**:"/tmp/convertedConfig.xml" }</small>|
+|       POST  | <small>`https://<ExpIP>/api/v1/migration/convert`</small>  | <small>_in body_<br/>{**"input"**: "path to the ZIP file",<br/>**"output"**: "path to the resulting PANOS config file",<br/>(optional) **dry-run**: boolean}</small>|
+|    example  | <small>`https://10.0.0.1/api/v1/migration/convert`</small> | <small>_in body_<br/>{"input": "/var/www/html/expedition-api/contents/configSamples/migration1.zip",<br/>"output":"/tmp/convertedConfig.xml",<br/> dry-run: true }</small>|
 
 
 In the case we have already imported a PAN-OS device into Expedition, it is also possible to provide that device’s identification to use the devices configuration as a base config on which to make the conversion.  
@@ -229,7 +229,7 @@ API syntax for Importing the PAN-OS Configuration into the project:
 | Method      | EndPoint                                   | Parameters | 
 |-------------|--------------------------------------------|------------|
 |       POST  | <small>`https://<ExpIP>/api/v1/projects/{projectId}/importConfig`</small> | <small>_in url_<br/>**"project"**: "projectID"<br/><br/>_in body_<br/>{**"config"**: "Panos Config file " }</small>|
-| example     | <small>`https://10.0.0.1/api/v1/projects/1/importConfig`</small>         | <small>_in url_<br/>project=1<br/><br/>_in body_<br/>{**"config"**: "/tmp/convertedConfig.xml" }</small> |
+| example     | <small>`https://10.0.0.1/api/v1/projects/1/importConfig`</small>         | <small>_in url_<br/>project=1<br/><br/>_in body_<br/>{"config": "/tmp/convertedConfig.xml" }</small> |
 
 <Tabs defaultValue={typeof window !== 'undefined' && localStorage.getItem('defaultLanguage') ? localStorage.getItem('defaultLanguage') : 'python'}
 values={[
@@ -495,7 +495,7 @@ API syntax for retrieve PAN-OS device contents:
 | Method      | EndPoint                                                                                   | Parameters                                                              | 
 |-------------|--------------------------------------------------------------------------------------------|-------------------------------------------------------------------------|
 |     GET     | <small>`https://<ExpIP>/api/v1/device/{deviceId}/retrieveContent/{config}`</small>  | <small>**"deviceID"**-> PAN-OS device ID,<br/>**"config"**-> "running"or "candidate"</small> |   
-|    example  | <small>`https://10.0.0.1/api/v1/device/1/retrieveContent/running`</small>        | <small>_in url_<br/>deviceID=1<br/>config=candidate</small> |
+|    example  | <small>`https://10.0.0.1/api/v1/device/1/retrieveContent/running`</small>        | <small>_in url_<br/>deviceID=1,<br/>config=candidate</small> |
 
 This is a task that, depending on the configuration size and the connection speed with the Panos Device, may take a reasonable amount of time.  
 
@@ -771,7 +771,7 @@ API syntax for sending APIcalls to the PAN-OS Device:
  Method       | EndPoint                                                                              | Parameters                                                              | 
 |-------------|---------------------------------------------------------------------------------------|-------------------------------------------------------------------------|-----------------------------------------|
 |     POST    | <small>`https://<YourExpeditionIP>/api/v1/projects/{projectId}/device/push`</small>   | <small>_in url_<br/>**"projectId"**-> Expedition Project ID<br/><br/>_in body_<br/>{**"serial"**: serial#ofyourFW",<br/>**"source"**: PAN-OSconfigfile<br/>}</small> | 
-|     example | <small>`https://<YourExpeditionIP>/api/v1/projects/1/device/push`</small>             | <small>_in url_<br/>**"projectId"**= 1<br/><br/>_in body_<br/>{**"serial"**: 01213221,<br/>**"source"**:1<br/>}</small> | 
+|     example | <small>`https://<YourExpeditionIP>/api/v1/projects/1/device/push`</small>             | <small>_in url_<br/>"projectId"= 1<br/><br/>_in body_<br/>{"serial": 01213221,<br/>"source":1<br/>}</small> | 
 
 
 When submitting the API calls, we can enumerate those ones that we want to submit or, if none is specified, all the generated API calls will be submitted to the device in the order of execution.  
@@ -919,7 +919,7 @@ API syntax for export PAN-OS configuration from Expedition:
 | Method | EndPoint                                                                       | Parameters                                                              |
 |-------------|--------------------------------------------------------------------------------|-------------------------------------------------------------------------|
 |     POST    | <small>`https://<ExpIP>/api/v1/projects/{projectId}/export`</small> | <small>_in url_<br/>{**"projectId"**->"$projectId"<br/><br/>_in body_<br/>{**"out:"**->PAN-OS configuration file,<br/>**"sourceID:"**->source configuration ID<br/>}</small> |  
-|     POST    | <small>`https://10.0.0.1/api/v1/projects/1/export`</small> | <small>_in url_**"projectId"**=1<br/><br/>_in body_<br/>{**"out:"**->"toExport.xml",<br/>**"sourceID:"**1}</small> |  
+|     POST    | <small>`https://10.0.0.1/api/v1/projects/1/export`</small> | <small>_in url_<br/>"projectId"=1<br/><br/>_in body_<br/>{"out:"->"toExport.xml",<br/>"sourceID:"1}</small> |  
 
 <Tabs defaultValue={typeof window !== 'undefined' && localStorage.getItem('defaultLanguage') ? localStorage.getItem('defaultLanguage') : 'python'}
 values={[
