--- a/docs/expedition/creating_migration_zip.mdx
+++ b/docs/expedition/creating_migration_zip.mdx
@@ -128,9 +128,12 @@ in the configuration, and declared security policies.
 
 | Method      | URL                                                             | Parameters |
 |-------------|-----------------------------------------------------------------|------------|
-| POST        | <small> `https://<ExpIP>/api/v1/migration/discovery` </small>       | <small>_in body_<br/>{**"vendor"**: "value",<br/>**"input"**: "path to the config file"}</small>|
-| example     | <small> `https://<ExpIP>/api/v1/migration/discovery` </small>       | <small>_in body_<br/>{"vendor": "stonesoft",<br/>"input": "/tmp/myMigrationFiles/cpProviders/exported_data.xml"}</small>| |
+| POST        | <small> `https://<ExpIP>/api/v1/migration/discovery` </small>       | <small>_in body_<br/>{**"vendor"**: "value",<br/>**"config"**: "path to the config file",<br/>(if cp) **"policy"**: "path to the policy file",<br/>(if cp) **"objects"**: "path to the objects file",<br/>(if cp) **"rulebase"**: "path to the rulebase file"}</small>|
+| example     | <small> `https://<ExpIP>/api/v1/migration/discovery` </small>       | <small>_in body_<br/>{"vendor": "stonesoft",<br/>"config": "/tmp/myMigrationFiles/cpProviders/exported_data.xml"}</small>| |
+| example     | <small> `https://<ExpIP>/api/v1/migration/discovery` </small>       | <small>_in body_<br/>{"vendor": "cp",<br/>"policy": "/tmp/myMigrationFiles/cpProviders/policy.W",<br/>"objects": "/tmp/myMigrationFiles/cpBranches/objects.C",<br/>"rulebase": "/tmp/myMigrationFiles/cpBranches/rulebases_5_0.fws"}</small>| |
 
+Depending on the vendor, more parameters can be given to discover sections within them. For instance, Checkpoint <R80 would also allow the fields
+`policy` (in replacement of `config`), `objects` and `rulebase`.
 
 <br/>Response example:
 <Tabs defaultValue={'stonesoft'}
