--- a/docs/expedition/expedition_workflow_migration.mdx
+++ b/docs/expedition/expedition_workflow_migration.mdx
@@ -59,7 +59,7 @@ API syntax for creating a new project:
 | Method      | EndPoint                                     | Parameters                     | 
 |-------------|----------------------------------------------|--------------------------------|
 |    POST     | <small>`https://<ExpIP>/api/v1/projects`</small> | <small>_in url_<br/>{ **"project"**:"project1", **"description"**:"Project for testing" }</small> |  
-|    example  | <small>`https://10.0.01/api/v1/projects`</small> | <small>{"project":"MyLittleProject", "description":"A migration project"}</small>           | 
+|    example  | <small>`https://10.0.0.1/api/v1/projects`</small> | <small>{"project":"MyLittleProject", "description":"A migration project"}</small>           | 
 
 <Tabs defaultValue={typeof window !== 'undefined' && localStorage.getItem('defaultLanguage') ? localStorage.getItem('defaultLanguage') : 'python'}
 values={[
@@ -134,28 +134,24 @@ For example, you can upload the cisco configration "_cisco.asa.txt_" within the 
 
 This folder should be reachable by the `www-data` user and its content should be readable by the user as well.
 
-### Step 4. Converting the source configuration to a PAN-OS configuration  
-The migration process takes an original configuration folder (**```originalConfigFolderPath```**) contains one or more files required for the conversion, a path for the resulting PANOS XML config (**```panosConfigPath```**) and the vendor selection (**`vendor`**) to determine the conversion logic to be applied.  
+### Step 4. Converting the source configuration to a PAN-OS configuration 
+The migration process takes one compressed ZIP file that encapsulates the file(s) from the original vendor(s) to be migrated,
+a base configuration where the migration will be inserted and a mapping file that provides instructions to determine
+where each configuration needs to be placed. For instance, this file will state whether we want a Fortinet policy to become a
+specific Device Group in a Panorama configuration, if we desire a specific routes file to be used for routing and zones calculations
+for a specific original configuration or if we desire some remapings to take place for specific networks or interfaces. 
 
-API syntax for Converting 3rd party vendor's configuration:  
+Supported vendors are Checkpoint, Cisco (ASA), Fortinet (Fortigate) and Juniper (Junos). <br/>
+Coming vendors, Cisco (Switch, ISR), Junper (Netscreen), PFSense, Sonicwall, Sophos. 
+  
+Refer to [Creating a migration ZIP file](creating_migration_zip) to obtain specific information on how to construct a ```ZIP file``` with the migration contents. 
 
-| Method      | EndPoint                                                   | Parameters |
-|-------------|------------------------------------------------------------|------------|
-|       POST  | <small>`https://<ExpIP>/api/v1/external-tools/convert`</small> |<small>_in body_<br/>{**"file"**: "path to the config file",<br/> **"out"**: "/tmp/cisco.xml",<br/>**"vendor"**: "ciscoasa" }</small>|
-|    example  | <small>`https://10.0.0.1/api/v1/external-tools/convert`</small> |  <small>{**"file"**: "/var/www/html/expedition-api/contents/configSamples/CiscoCase/<br/>ciscoasa.txt",<br/> **"out"**: "/tmp/cisco.xml",<br/>**"vendor"**: "ciscoasa" }</small>|
-:::info    
-**Replace `vendor` value with the corresponding supported vendor value**:  
-- **ciscoasa** Cisco ASA
-- **pfsense** Pfsense
-- **sophos** Sophos
-- **sonicwall**  Sonicwall
-- **netscreen**  Juniper Netscreen
-- **fortinet**  Fortinet Fortigate
-- **srx**  Juniper Junos
-- **cp-r80**  Checkpoint > R80
-- **ciscoswitch**  Cisco Switch
-- **ciscoisr** Cisco ISR
-:::  
+API syntax for Converting 3rd party vendors' configurations:  
+
+| Method      | URL                                                        | Parameters |
+|-------------|-----------------------------------------------------------------|------------|
+|       POST  | <small>`https://<ExpIP>/api/v1/migration/convert`</small>  | <small>_in body_<br/>{**"input"**: "path to the ZIP file",<br/>**"output"**: "path to the resulting PANOS config file",<br/>(optional) **dry-run**: boolean}</small>|
+|    example  | <small>`https://10.0.0.1/api/v1/migration/convert`</small> | <small>_in body_<br/>{"input": "/var/www/html/expedition-api/contents/configSamples/migration1.zip",<br/>"output":"/tmp/convertedConfig.xml",<br/> dry-run: true }</small>|
 
 In the case we have already imported a PAN-OS device into Expedition, it is also possible to provide that device’s identification to use the devices configuration as a base config on which to make the conversion.  
 
@@ -232,7 +228,7 @@ API syntax for Importing the PAN-OS Configuration into the project:
 | Method      | EndPoint                                   | Parameters | 
 |-------------|--------------------------------------------|------------|
 |       POST  | <small>`https://<ExpIP>/api/v1/projects/{projectId}/importConfig`</small> | <small>_in url_<br/>**"project"**: "projectID"<br/><br/>_in body_<br/>{**"config"**: "Panos Config file " }</small>|
-| example     | <small>`https://10.0.0.1/api/v1/projects/1/importConfig`</small>         | <small>_in url_<br/>project=1<br/><br/>_in body_<br/>{**"config"**: "/tmp/convertedCisco.xml" }</small> |
+| example     | <small>`https://10.0.0.1/api/v1/projects/1/importConfig`</small>         | <small>_in url_<br/>project=1<br/><br/>_in body_<br/>{"config": "/tmp/convertedConfig.xml" }</small> |
 
 <Tabs defaultValue={typeof window !== 'undefined' && localStorage.getItem('defaultLanguage') ? localStorage.getItem('defaultLanguage') : 'python'}
 values={[
@@ -498,7 +494,7 @@ API syntax for retrieve PAN-OS device contents:
 | Method      | EndPoint                                                                                   | Parameters                                                              | 
 |-------------|--------------------------------------------------------------------------------------------|-------------------------------------------------------------------------|
 |     GET     | <small>`https://<ExpIP>/api/v1/device/{deviceId}/retrieveContent/{config}`</small>  | <small>**"deviceID"**-> PAN-OS device ID,<br/>**"config"**-> "running"or "candidate"</small> |   
-|    example  | <small>`https://10.0.0.1/api/v1/device/1/retrieveContent/running`</small>        | <small>_in url_<br/>deviceID=1<br/>config=candidate</small> |
+|    example  | <small>`https://10.0.0.1/api/v1/device/1/retrieveContent/running`</small>        | <small>_in url_<br/>deviceID=1,<br/>config=candidate</small> |
 
 This is a task that, depending on the configuration size and the connection speed with the Panos Device, may take a reasonable amount of time.  
 
@@ -702,7 +698,7 @@ API syntax for generating PAN-OS API calls:
 | Method | EndPoint                                                                                    | Parameters                                                              | 
 |-------------|----------------------------------------------------------------------------------------|-------------------------------------------------------------------------|
 |     POST    | <small>`https://<YourExpeditionIP>/api/v1/projects/{projectId}/apiCalls/{type}`</small>| <small>_in url_<br/>**"projectId"**-> Expedition Project ID,<br/>**"type"**-> "mega" or "atomic" or "subatomic" or "clear"<br/><br/> _in body_<br/>{**"serial"**: serial#ofyourFW",<br/>**"role"**: "admin",<br/>**"auth_type"**: "UserPassword",<br/>**"username"**: *"YourPAN-OSdeviceLoginusername"*,<br/>**"password"**: *"YourPAN-OSdeviceLoginpassword"*,<br/>**"sourceId"**: 0,<br/>**"action"**: "set"<br/>}</small> |  
-|     example | <small>`https://<YourExpeditionIP>/api/v1/projects/1/apiCalls/atomic`</small>          | <small>{"serial": 012123212,<br/>"role":"admin",<br/>"auth_type":"UserPassword",<br/>"username":"YourPAN-OSdeviceLoginusername",<br/>"password":"YourPAN-OSdeviceLoginpassword",<br/>"sourceId":0,<br/>"action":"set"<br/>}</small> |  
+|     example | <small>`https://10.0.0.1/api/v1/projects/1/apiCalls/atomic`</small>          | <small>{"serial": 012123212,<br/>"role":"admin",<br/>"auth_type":"UserPassword",<br/>"username":"YourPAN-OSdeviceLoginusername",<br/>"password":"YourPAN-OSdeviceLoginpassword",<br/>"sourceId":0,<br/>"action":"set"<br/>}</small> |  
 
 The response will provide us a list of the generated API calls with their corresponding ids and types and order of execution.  
 
@@ -774,8 +770,7 @@ API syntax for sending APIcalls to the PAN-OS Device:
  Method       | EndPoint                                                                              | Parameters                                                              | 
 |-------------|---------------------------------------------------------------------------------------|-------------------------------------------------------------------------|-----------------------------------------|
 |     POST    | <small>`https://<YourExpeditionIP>/api/v1/projects/{projectId}/device/push`</small>   | <small>_in url_<br/>**"projectId"**-> Expedition Project ID<br/><br/>_in body_<br/>{**"serial"**: serial#ofyourFW",<br/>**"source"**: PAN-OSconfigfile<br/>}</small> | 
-|     example | <small>`https://<YourExpeditionIP>/api/v1/projects/1/device/push`</small>             | <small>_in url_<br/>**"projectId"**= 1<br/><br/>_in body_<br/>{**"serial"**: 01213221,<br/>**"source"**:1<br/>}</small> | 
-
+|     example | <small>`https://10.0.0.1/api/v1/projects/1/device/push`</small>             | <small>_in url_<br/>"projectId"= 1<br/><br/>_in body_<br/>{"serial": 01213221,<br/>"source":1<br/>}</small> | 
 
 When submitting the API calls, we can enumerate those ones that we want to submit or, if none is specified, all the generated API calls will be submitted to the device in the order of execution.  
 
@@ -922,7 +917,7 @@ API syntax for export PAN-OS configuration from Expedition:
 | Method | EndPoint                                                                       | Parameters                                                              |
 |-------------|--------------------------------------------------------------------------------|-------------------------------------------------------------------------|
 |     POST    | <small>`https://<ExpIP>/api/v1/projects/{projectId}/export`</small> | <small>_in url_<br/>{**"projectId"**->"$projectId"<br/><br/>_in body_<br/>{**"out:"**->PAN-OS configuration file,<br/>**"sourceID:"**->source configuration ID<br/>}</small> |  
-|     POST    | <small>`https://10.0.0.1/api/v1/projects/1/export`</small> | <small>_in url_**"projectId"**=1<br/><br/>_in body_<br/>{**"out:"**->"toExport.xml",<br/>**"sourceID:"**1}</small> |  
+|     POST    | <small>`https://10.0.0.1/api/v1/projects/1/export`</small> | <small>_in url_<br/>"projectId"=1<br/><br/>_in body_<br/>{"out:"->"toExport.xml",<br/>"sourceID:"1}</small> |  
 
 <Tabs defaultValue={typeof window !== 'undefined' && localStorage.getItem('defaultLanguage') ? localStorage.getItem('defaultLanguage') : 'python'}
 values={[
