--- a/docs/expedition/expedition_workflow_migration.mdx
+++ b/docs/expedition/expedition_workflow_migration.mdx
@@ -44,10 +44,13 @@ This code can be found at the following link:
 
 <a href="https://conversionupdates.paloaltonetworks.com/expedition2/examples/workflows.zip">https://conversionupdates.paloaltonetworks.com/expedition2/examples/workflows.zip</a>   
 
-### Step 1. Obtainig the API Keys
+### Step 1. Obtaining the API Keys
 
-Refer to [Obtaining the API Keys section](creating_credentials.mdx) to obtain a valid API key stored in the ```hed``` variable.
+Refer to [Obtaining the API Keys](creating_credentials.mdx) section to obtain a valid API key stored in the ```hed``` variable.
 
+### Step 2. Start the Expedition Agent
+
+Refer to [Managing Expedition's Agent](managing_expedition_agent) section  to start the agent and be able to perform imports into a project.
 
 ### Step 2. Creating an Expedition project    
 In the large amount of automation cases, we will require having an Expedition project. Making a POST call to the projects route, we can create a project with a desired name.
@@ -127,12 +130,18 @@ The migration process would require to upload one of more configuration files to
 A minimum one would be the original vendor configuration file, and we plan to support bringing also routing table files 
 to support dynamic routing tables which values are not specified in the firewall configuration.
 
-For example, you can upload the cisco configration "_cisco.asa.txt_" within the folder:  
-```console
-/var/www/html/expedition-api/contents/configSamples/CiscoCase/ 
-``` 
+The configurations to be migrated must be contained in a Zip file that provides the different configuration files and 
+some instructions on how the migration needs to be performed.
+More information about this Zip creation can be found in [Creating a migration file](creating_migration_zip.mdx) for a 
+manual Zip creation and in [Creating a migration file (by steps)](creating_migration_zip_2.mdx) for an assisted Zip creation.
 
-This folder should be reachable by the `www-data` user and its content should be readable by the user as well.
+(CASE A) In case of performing the Zip manually, make sure you:
+- name the Zip such as `zipArchive_&lt;resourceId&gt;.zip` in where `resourceId` is a numeric value you would later use to refer to the zip resourceId.
+For instance, _zipArchive_1234.zip_.
+- locate the zip file within the `/home/userSpace/uploads/`
+- the `zipArchive_&lt;resourceId&gt;.zip` has been set to allow `www-data` to read and write on it.
+
+(CASE B) If you follow the assisted Zip creation, the related API calls will provide you with the Zip resourceId.
 
 ### Step 4. Converting the source configuration to a PAN-OS configuration 
 The migration process takes one compressed ZIP file that encapsulates the file(s) from the original vendor(s) to be migrated,
@@ -141,19 +150,15 @@ where each configuration needs to be placed. For instance, this file will state 
 specific Device Group in a Panorama configuration, if we desire a specific routes file to be used for routing and zones calculations
 for a specific original configuration or if we desire some remapings to take place for specific networks or interfaces. 
 
-Supported vendors are Checkpoint, Cisco (ASA), Fortinet (Fortigate) and Juniper (Junos). <br/>
-Coming vendors, Cisco (Switch, ISR), Junper (Netscreen), PFSense, Sonicwall, Sophos. 
-  
-Refer to [Creating a migration ZIP file](creating_migration_zip) to obtain specific information on how to construct a ```ZIP file``` with the migration contents. 
+Refer to [Creating a migration ZIP file](creating_migration_zip) to see the list of supported vendors
 
 API syntax for Converting 3rd party vendors' configurations:  
 
 | Method      | URL                                                        | Parameters |
 |-------------|------------------------------------------------------------|------------|
-|       POST  | <small>`https://<ExpIP>/api/v1/migration/convert`</small>  | <small>_in body_<br/>{**"input"**: "path to the ZIP file",<br/>**"output"**: "path to the resulting PANOS config file",<br/>(optional) **dry-run**: boolean}</small>|
-|    example  | <small>`https://10.0.0.1/api/v1/migration/convert`</small> | <small>_in body_<br/>{"input": "/var/www/html/expedition-api/contents/configSamples/migration1.zip",<br/>"output":"/tmp/convertedConfig.xml",<br/> dry-run: true }</small>|
+|       POST  | <small>`https://<ExpIP>/api/v1/migration/convert`</small>  | <small>_in body_<br/>{**"resource"**: "Zip resource id",<br/>(optional) **dry-run**: boolean}</small>|
+|    example  | <small>`https://10.0.0.1/api/v1/migration/convert`</small> | <small>_in body_<br/>{"resource": 1234,<br/> dry-run: true }</small>|
 
-In the case we have already imported a PAN-OS device into Expedition, it is also possible to provide that device’s identification to use the devices configuration as a base config on which to make the conversion.  
 
 <Tabs defaultValue={typeof window !== 'undefined' && localStorage.getItem('defaultLanguage') ? localStorage.getItem('defaultLanguage') : 'python'}
 values={[
@@ -166,14 +171,19 @@ values={[
 
 ```python
 print('CONVERT FORTINET CONFIGURATION TO PALO ALTO')
-data = {"file":originalConfigPath,"out":panosConfigPath,"vendor":vendor, "serial":serial}
-print(data)
-r = requests.post('https://'+ip+'/api/v1/external-tools/convert', data=data, verify=False, headers=hed)
+data = {"resource":zipResource}
+r = requests.post(
+        'https://'+ip+'/api/v1/migration/convert', 
+        data=data, 
+        verify=False, 
+        headers=hed)
 response=r.json()
 success = json.dumps(response['Contents']['success'])
 if success=='true':
     #print('Config converted successfully')
-    print(json.dumps(response['Contents']['response']['response-messages']['messages'][0]['message']))
+    print(
+      json.dumps(
+         response['Contents']['response']['response-messages']['messages'][0]['message']))
 print('')
 ```
 </TabItem> 
@@ -212,7 +222,7 @@ if ($success=='true'){
 package main
 import "fmt"
 
-func main() {
+func main() {Creating an Expedition project
     //TODO
 }
 ```
@@ -227,8 +237,8 @@ API syntax for Importing the PAN-OS Configuration into the project:
 
 | Method      | EndPoint                                   | Parameters | 
 |-------------|--------------------------------------------|------------|
-|       POST  | <small>`https://<ExpIP>/api/v1/projects/{projectId}/importConfig`</small> | <small>_in url_<br/>**"project"**: "projectID"<br/><br/>_in body_<br/>{**"config"**: "Panos Config file " }</small>|
-| example     | <small>`https://10.0.0.1/api/v1/projects/1/importConfig`</small>         | <small>_in url_<br/>project=1<br/><br/>_in body_<br/>{"config": "/tmp/convertedConfig.xml" }</small> |
+|       POST  | <small>`https://<ExpIP>/api/v1/projects/{projectId}/import`</small> | <small>_in url_<br/>**"project"**: "projectID"<br/><br/>_in body_<br/>{ **"resource"**: "configuration resource id" }</small>|
+| example     | <small>`https://10.0.0.1/api/v1/projects/1/import`</small>         | <small>_in url_<br/>project=1<br/><br/>_in body_<br/>{ "resource": "43232" }</small> |
 
 <Tabs defaultValue={typeof window !== 'undefined' && localStorage.getItem('defaultLanguage') ? localStorage.getItem('defaultLanguage') : 'python'}
 values={[
@@ -241,7 +251,7 @@ values={[
 
 ```python
 print('IMPORT CONFIGURATION')
-data = {"config":panosConfigPath}
+data = {"resource":converterConfig}
 r = requests.post('https://'+ip+'/api/v1/projects/'+projectId+'importConfig', data=data, verify=False, headers=hed)
 response=r.json()
 success = json.dumps(response['Contents']['success'])
