fixed password typo in creating_credential.mdx

--- a/docs/expedition/creating_credentials.mdx
+++ b/docs/expedition/creating_credentials.mdx
@@ -98,7 +98,7 @@ print('LOGIN')
 
 ip="127.0.0.1" #your Expedition IP reachable from the Script execution machine
 user="admin"
-passsword="paloalto"
+password="paloalto"
 
 url = 'https://'+ip+'/api/v1/login'
 credentials = {"username":user, "password":password}
