Fix broken markdown links

--- a/docs/apis/panos_tutorials_address_group.mdx
+++ b/docs/apis/panos_tutorials_address_group.mdx
@@ -23,7 +23,7 @@ To follow this tutorial, it is recommended that that you are familiar with the c
 
 Make sure you have a Palo Alto Networks Next-Generation Firewall deployed and that you have administrative access to its Management interface via HTTPS. To avoid potential disruptions, it's recommended to run all the tests on a **non-production** environment.
 
-No specific programming language expertise is required, although _Python_ is recommended. Examples with both [XML API](/docs/xmlapi_qs), [REST API](/docs/restapi_qs) and [pan-python](/docs/panpython_qs) are provided.
+No specific programming language expertise is required, although _Python_ is recommended. Examples with both [XML API](/docs/apis/xmlapi_qs), [REST API](/docs/apis/restapi_qs) and [pan-python](/docs/apis/panpython_qs) are provided.
 
 ## Static Address Groups
 
