--- a/docs/expedition/creating_migration_zip_2.mdx
+++ b/docs/expedition/creating_migration_zip_2.mdx
@@ -542,7 +542,7 @@ The migration of a configuration (or set of configurations) may take between som
 related jobId to determine when this task is completed and, then, obtain the `resource id` that can be later be used to import it into a project
 or download for pushing it into your PANOS device.
 
-For information on how to monitor a running job,  please refer to [Managing Jobs](managing_job.mdx) section for more information.
+For information on how to monitor a running job,  please refer to [Managing Jobs](managing_jobs.mdx) section for more information.
 
 Once the job is completed (`state` = 1), the migrated PANOS configuration will be offered via a `resourceID`.
 Such resourceId can be collected via the JSON path <br/>
