--- a/docs/apis/panos_tutorials_uid_monitor.mdx
+++ b/docs/apis/panos_tutorials_uid_monitor.mdx
@@ -59,8 +59,8 @@ list from a URL.
 Years ago it was up to the end customer to create its own connectors.  Just like the CGI script we
 shared before. But as presence of PAN-OS powered NGFW's grown among enterprise customers more application
 vendors decided to leverage the User-ID value by providing API clients out-of-the-box. Althought this is
-great (from a feature point of view) losing the option to fetch a list from a URL might make it
-difficult to integrate legacy technologies.
+great (for Palo Alto Network customers) losing the option to fetch a list from a URL (EDL mode) makes it
+more difficult to integrate legacy technologies that might be out there still in the network.
 
 ## Hijacking User-ID messages with a proxy
 
