changed name, fixed h4 styling

--- a/api/iot/iot-public-api.mdx
+++ b/api/iot/iot-public-api.mdx
@@ -1,7 +1,7 @@
 ---
-id: iot-api
+id: iot-public-api
 sidebar_label: Overview
-title: IoT API
+title: IoT Public API
 hide_table_of_contents: True
 hide_title: true
 hide_sidebar: true
