Support requested changes
Renamed Threat Vault Public to Threat Vault
Changed API reset time
Changed description for header

--- a/api/tp/tp-public-api.mdx
+++ b/api/tp/tp-public-api.mdx
@@ -1,7 +1,7 @@
 ---
-id: threat-prevention-public-api-endpoints
+id: threat-prevention-api-endpoints
 sidebar_label: Overview
-title: Threat Vault Public API Endpoints
+title: Threat Vault API Endpoints
 hide_table_of_contents: True
 hide_title: true
 hide_sidebar: true
