Updating expediton 2.0 document

--- a/docs/expedition/creating_credentials.mdx
+++ b/docs/expedition/creating_credentials.mdx
@@ -40,9 +40,6 @@ export function SetLanguage (lang) {
 <br/>
 
 In this section we present a workflow example to migrate a third party vendor configuration into a PANOS configuration. 
-This code can be found at the following link:
-
-<a href="https://conversionupdates.paloaltonetworks.com/expedition2/examples/workflows.zip">https://conversionupdates.paloaltonetworks.com/expedition2/examples/workflows.zip</a>   
 
 
   
@@ -51,7 +48,7 @@ In general, all the API calls to Expedition require user authentication, in orde
 This is done through the use of API keys.
 The first step is to log into Expedition and retrieve an API key that would offer us access to later API calls.
 
-As shown in Snippet 1, defines the Expedition IP to connect (`ip` variable), credentials to be used for authentication (```credentials```) and the URL to access the login route (```url```).
+As shown in Snippet 1, defines the Expedition IP to connect (`ip` variable),if you are using the container , the ip will be "localhost",  credentials to be used for authentication (```credentials```) and the URL to access the login route (```url```).
 
 Once those variables have been provided, creates and establishes an SSL connection (```curl```) to Expedition to make a 
 request to the login URL with the specified credentials, and collects the response from the server into the ```response``` variable.
@@ -73,7 +70,7 @@ API syntax for Login to Expedition:
 
 | Method      | EndPoint                                   | Parameters                   | Example Value                                                    |
 |-------------|--------------------------------------------|------------------------------|------------------------------------------------------------------|
-|    POST     | <small>`https://<YourExpeditionIP>/api/v1/login`</small>  | <small>username, password</small>           | <small>{**"username"**:"admin", **"password"**:"paloalto"}</small> |  
+|    POST     | <small>`https://localhost/api/v1/login`</small>  | <small>username, password</small>           | <small>{**"username"**:"admin", **"password"**:"paloalto"}</small> |  
 
 <Tabs defaultValue={typeof window !== 'undefined' && localStorage.getItem('defaultLanguage') ? localStorage.getItem('defaultLanguage') : 'python'}
 values={[
@@ -96,7 +93,7 @@ urllib3.disable_warnings(urllib3.exceptions.InsecureRequestWarning)
 
 print('LOGIN')
 
-ip="127.0.0.1" #your Expedition IP reachable from the Script execution machine
+ip="localhost" #your Expedition IP reachable from the Script execution machine
 user="admin"
 password="paloalto"
 
@@ -119,7 +116,7 @@ hed = {'Authorization': 'Bearer ' + auth_token}
 ```php
 echo  "LOGIN \n";
 
-$ip = "127.0.0.1"; //your Expedition IP reachable from the Script execution machine
+$ip = "localhost"; //your Expedition IP reachable from the Script execution machine
 $user = "admin";
 $password = "paloalto";
 
@@ -165,7 +162,7 @@ type Response struct {
 func main() {
     fmt.Println("LOGIN")
 
-    var ip  := "127.0.0.1" //your Expedition IP reachable from the Script execution machine
+    var ip  := "localhost" //your Expedition IP reachable from the Script execution machine
     var user := "admin"
     var password := "paloalto"
 
