--- a/docs/expedition/managing_expedition_agent.mdx
+++ b/docs/expedition/managing_expedition_agent.mdx
@@ -52,8 +52,8 @@ The calls comply with the following structure:
 
 | Method      | EndPoint                                                         | Parameters                   | 
 |-------------|------------------------------------------------------------------|------------------------------|
-|    GET      | <small>`https://<YourExpeditionIP>/api/v1/agent/<action>`</small> | <small>action : { start \| stop \| restart }</small> |    
-|    Example  | <small>`https://10.0.0.1/api/v1/agent/restart`</small> | <small></small> |  
+|    GET      | <small>`https://localhost/api/v1/agent/<action>`</small> | <small>action : { start \| stop \| restart }</small> |    
+|    Example  | <small>`https://localhost/api/v1/agent/restart`</small> | <small></small> |  
 ### Starting the Agent
 
 Starting the agent would require having an authenticated session. If stopped, the agent will start running, if already started, the request will have no implications.
