--- a/docs/expedition/managing_jobs.mdx
+++ b/docs/expedition/managing_jobs.mdx
@@ -67,15 +67,13 @@ values={[
 <TabItem value="python">  
 
 ```python
-print('IMPORT CONFIGURATION')
-data  = {'resource':convertedResource}
-r = requests.post('https://'+ip+'/api/v1/project/'+projectId+'/import', 
-        data=data, 
-        verify=False, 
-        headers=hed)
-response=r.json()
-jobId = json.dumps(response['Contents']['response']['data']['content']['system']['jobs']['jobId'])
-print(path+'\n')
+print("*****Import the PAN-OS configuration of your device to the project\n")
+url = "https://" + ip + "/api/v1/project/{0}/import/device".format(int(projectId))
+print(url)
+data = {"device_id": DeviceId}
+r = requests.post(url, data=data, verify=False, headers=hed)
+response = r.json()
+jobId = json.dumps(response["data"]["job_id"])
 ```
 </TabItem> 
 
@@ -170,8 +168,8 @@ The calls comply with the following structure:
 
 | Method      | EndPoint                                                              | Parameters                   | 
 |-------------|-----------------------------------------------------------------------|------------------------------|
-|    GET      | <small>`https://<YourExpeditionIP>/api/v1/job/status/<jobId>`</small> | <small>*in url*<br/>**jobId** : job id value</small> |    
-|    Example  | <small>`https://10.0.0.1/api/v1/job/status/1619`</small>              | <small>*in url*<br/> jobId: 1619</small> |  
+|    GET      | <small>`https://localhost/api/v1/job/status/<jobId>`</small> | <small>*in url*<br/>**jobId** : job id value</small> |    
+|    Example  | <small>`https://localhost/api/v1/job/status/1619`</small>              | <small>*in url*<br/> jobId: 1619</small> |  
 
 <Tabs defaultValue={typeof window !== 'undefined' && localStorage.getItem('defaultLanguage') ? localStorage.getItem('defaultLanguage') : 'python'}
 values={[
@@ -183,22 +181,41 @@ values={[
 <TabItem value="python">  
 
 ```python
-jobFinished= False
-print('CHECK IMPORT FINISHED')
-r = requests.get('https://'+ip+'/api/v1/job/status/'+jobId, verify=False, headers=hed)
-response=r.json()
-jobState = json.dumps(response['Contents']['response']['data']['content']['msg']['state'])
-percentage = float(jobState)*100
-print('Importing configuration: '+ str(round(percentage,2))+ '%')
-
-#Wait until all content is retrieved from device
-while(jobState != '1'):
-    sleep(0.5)
-    r = requests.get('https://'+ip+'/api/v1/job/status/'+jobId, verify=False,headers=hed)
+jobFinished = False
+print("CHECK configuration upload status...........")
+r = requests.get(
+    "https://" + ip + "/api/v1/job/" + jobId + "?complete=true",
+    verify=False,
+    headers=hed,
+)
+response = r.json()
+# print(response)
+jobState = json.dumps(response["data"]["state"])
+percentage = float(jobState) * 100
+print(
+    "Import PAN-OS configuration from devie to Project: "
+    + str(round(percentage, 2))
+    + "%\n"
+)
+# Wait until job is done
+while jobState != "1":
+    sleep(5)
+    r = requests.get(
+        "https://" + ip + "/api/v1/job/" + jobId + "?complete=true",
+        verify=False,
+        headers=hed,
+    )
     response = r.json()
-    jobState = json.dumps(response['Contents']['response']['data']['content']['system']['jobs']['state'])
-    percentage = float(jobState)*100
-    print('Importing configuration: '+ str(round(percentage,2))+ '%')
+    jobState = json.dumps(response["data"]["state"])
+    percentage = float(jobState) * 100
+    print(
+        "PAN-OS configuration has been imported to Project: "
+        + str(round(percentage, 2))
+        + "%\n"
+    )
+response = r.json()
+statusmessage = json.dumps(response["data"]["task"][0]["statusMessage"])
+print(statusmessage)
 ```
 </TabItem> 
 <TabItem value="go">  
@@ -252,8 +269,8 @@ and a message will inform that the current job cannot be cancelled.
 
 | Method      | EndPoint                                                              | Parameters                   | 
 |-------------|-----------------------------------------------------------------------|------------------------------|
-|    DELETE   | <small>`https://<YourExpeditionIP>/api/v1/job/<jobId>`</small> | <small>*in url*<br/>**jobId** : job id value</small> |    
-|    Example  | <small>`https://10.0.0.1/api/v1/job/1619`</small>              | <small>*in url*<br/> jobId: 1619</small> |  
+|    DELETE   | <small>`https://localhost/api/v1/job/<jobId>`</small> | <small>*in url*<br/>**jobId** : job id value</small> |    
+|    Example  | <small>`https://localhost/api/v1/job/1619`</small>              | <small>*in url*<br/> jobId: 1619</small> |  
 
 The calls comply with the following structure:
 
@@ -310,8 +327,5 @@ curl_close($curl);
 ### Getting the Job result
 
 Once a job is completed, it is then possible to continue with the next steps in the user's workflow.
-In some cases, the job can suggest a next step that it is meaningful given the current completed task.
-For instance, after a configuration has been migrated, a next step would recommend downloading the resulting PANOS configuration.
-
-This information can be found in the `nextStep` field.
- 
+In some cases, the job can suggest a next step that it is meaningful given the current completed task.  
+For instance, after a configuration has been imorted to the device, the next step would be assign device with configuration to the project. 
